# HITL

./: .gitignore  CONTEXT.md  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  vars.centroid-with-intensity.json  vars.example.json  vars.fgr-tight.json  vars.fgr.json  vars.multi-assert.json  vars.smoke.json  vars.tight.json
.sc-compose/logs/: sc-compose.log.jsonl
docs/: deck.md  sop.md  test-engineer-guide.md
docs/prd/: agentic-hitl-test-generator.md  fgr-uniformity-domain-example.md  primitives-kit-and-hitl-author.md
hitl_lib/: __init__.py  assertions.py  camera.py  display.py  fixtures.py  roi.py
issues/: 0001-first-tracer-bullet.md  0002-deterministic-tolerance-flip.md  0003-hitl-test-skill-v0.md  0004-multi-template-picker.md  0005-smoke-test-with-include.md  0006-render-smoke-tests.md  0007-sop-doc.md  0008-marp-deck.md  0009-readme-and-polish.md  0010-setup-preamble-primitive.md  0011-pattern-capture-and-centroid.md  0012-assert-intensity-and-multi-assert.md  0013-primitive-tests-and-picker-tweak.md  0014-hitl-author-skill.md  0015-docs-reorganization.md  0016-hitl-lib-fgr-support.md  0017-fgr-primitives-and-template.md  0018-fgr-docs.md
templates/: _shared_setup.j2  centroid-with-intensity.py.j2  fgr-uniformity.py.j2  smoke-test.py.j2  vision-centroid.py.j2  vision-multi-assert.py.j2
templates/primitives/: assert_centroid.j2  assert_intensity.j2  (+4 more)
tests/: test_assertions.py  test_camera.py  test_composition.py  test_hitl_author_doc.py  test_pipeline.py  test_primitives.py  test_roi.py  test_skill_doc.py  test_template_render.py
(+2 files in other folders)
